--- a/package.json
+++ b/package.json
@@ -24,14 +24,18 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
+    "embla-carousel-react": "^8.2.1",
     "firebase": "^10.13.1",
     "lucide-react": "^0.437.0",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-spring": "^9.7.4",
+    "react-spring-3d-carousel": "^1.3.4",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0",
     "uuid4": "^2.0.3"
   },
   "devDependencies": {
