--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "react-icons": "^5.3.0",
     "react-spring": "^9.7.4",
     "react-spring-3d-carousel": "^1.3.4",
+    "react-youtube": "^10.1.0",
     "tailwind-merge": "^2.5.2",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
     "uuid4": "^2.0.3"
