--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "firebase": "^10.13.1",
     "lucide-react": "^0.437.0",
     "next": "14.2.7",
+    "openai": "^4.58.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
